add discount system

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,3 @@
-- Удаление оплаченых счетов которые висят больше полугода
+- Удаление оплаченых заказов которые висят больше полугода
+- Проверка ожитающих заказов при нажатии на кнопку "Мои заказы"
+- Проверка перед активацией пробного периода, есть ли у пользователя промокод
